kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rog-deployment
  labels:
    app: rog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rog
  template:
    metadata:
      labels:
        app: rog
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: rog-storage
          emptyDir: {}
      containers:
        - name: rog
          image: rog
          volumeMounts:
            - name: rog-storage
              mountPath: /storage
          command:
            - gunicorn
            - rog.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "90"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 500m
              cpu: 300m
            limits:
              memory: 500m
              cpu: 300m
        - name: rog-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: rog-storage
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
            limits:
              memory: 200Mi
              cpu: 100m
