kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rog
spec:
  selector:
    app: rog
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: rog-storage-nginx
spec:
  selector:
    app: rog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
