kustomize/ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://center-rog.si"
      - "https://www.center-rog.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rog
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    #nginx.ingress.kubernetes.io/proxy-body-size: 10m
    # for more ciphers
    #nginx.ingress.kubernetes.io/ssl-ciphers: "ALL:!aNULL:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP"
    # nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "false"
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      traefik-plugin-blockuseragent-2@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - center-rog.si
        - www.center-rog.si
      secretName: rog-wagtail-tls
  rules:
    - host: center-rog.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rog
                port:
                  number: 8000
    - host: www.center-rog.si
      http: *http_paths
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rog-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: rog-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.center-rog.si
      secretName: rog-nginx-tls
  rules:
    - host: files.center-rog.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rog-nginx
                port:
                  number: 80
